examples/modules/expected/0763-modules-import-type-non-transitive.stderr
error: type 'COnly' is not visible; #import the module that declares it
  --> examples/modules/0763-modules-import-type-non-transitive.sx:17:9
   |
17 |     x : COnly = .{ v = 5 };
   |         ^^^^^
